# muhkuh_old

./: CMakeLists.txt  changelog.txt
application/: CMakeLists.txt  muhkuh_aboutDialog.cpp  muhkuh_app.cpp  muhkuh_app.h  muhkuh_configDialog.cpp  muhkuh_configDialog.h  muhkuh_debugger.cpp  muhkuh_debugger.h  muhkuh_htmltag_lua.cpp  muhkuh_icons.cpp  muhkuh_icons.h  muhkuh_lua.cpp  muhkuh_mainFrame.cpp  muhkuh_mainFrame.h  muhkuh_plugin.cpp  muhkuh_plugin_manager.cpp
application/icons/famfamfam_silk_icons_v013/: world.xpm
application/templates/: muhkuh.rc.m4  muhkuh_version.h
installer/inno/: lua_scripts.iss  muhkuh.iss  muhkuh_app.iss  muhkuh_common.iss  muhkuh_romloader_baka.iss  muhkuh_romloader_openocd.iss  muhkuh_romloader_uart.iss  muhkuh_romloader_usb.iss
lua/lib/mhash/: gen_swig_wrapper.sh  mhash_wrap.cpp
plugins/: muhkuh_lua_override.h
plugins/_luaif/: bit_lua_bind.cpp  bit_lua_datatypes.lua  bit_wxlua_bindings.h  muhkuh_lua_bind.cpp  muhkuh_lua_datatypes.lua  muhkuh_wxlua_bindings.h  serverkuh_lua_bind.cpp  serverkuh_lua_datatypes.lua  serverkuh_wxlua_bindings.h
plugins/dpm/: dpm_lua_override.h
plugins/dpm/netx5/: dpm_netx5_lua.i
plugins/romloader/: romloader.cpp  romloader.h  romloader_lua_override.h
plugins/romloader/baka/: romloader_baka_lua.i  romloader_baka_main.cpp
plugins/romloader/uart/: romloader_uart_lua.i  (+4 more)
regkuh/: regkuh.cpp
regkuh/templates/: regkuh.rc.m4
serverkuh/: serverkuh_app.cpp  serverkuh_icons.cpp  serverkuh_icons.h  serverkuh_id.h  serverkuh_mainFrame.cpp  serverkuh_mainFrame.h
serverkuh/templates/: serverkuh.rc.m4
(+33 files in other folders)
